add hojetem link

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
   <meta property="og:title" content="Konsole Studio">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="http://konsole.studio">
-	<meta property="og:site_name" content=" Konsole Studio">
-	<meta property="og:description" content="Creative development studio">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://konsole.studio">
+  <meta property="og:site_name" content=" Konsole Studio">
+  <meta property="og:description" content="Creative development studio">
 
   <!-- Styles -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -76,57 +76,59 @@
     </header>
     <br>
     <div class="mouse-icon hidden-xs">
-			<div class="scroll"></div>
-		</div>
+      <div class="scroll"></div>
+    </div>
 
     <section id="main-info">
-	    <div class="container">
-		    <div class="row">
+      <div class="container">
+        <div class="row">
           <h2 class='section-title'>Our projects</h2>
         </div>
-		    <div class="row">
+        <div class="row">
           <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.4s">
             <a target="_blank" href="#">
               <img src="img/placeholder.png" class="project-image">
-  				    <hr class="line darkPurple">
-  				    <h3>Alive Engine</h3>
-  				    <p>An open source Game Engine made with ECMAScript 6, Electron, WebGL and Webpack</p>
+              <hr class="line darkPurple">
+              <h3>Alive Engine</h3>
+              <p>An open source Game Engine made with ECMAScript 6, Electron, WebGL and Webpack</p>
             </a>
           </div>
-			    <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.4s">
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.4s">
             <a target="_blank" href="http://gamejolt.com/games/alive/10835">
               <img src="img/alive.gif" class="project-image">
-  				    <hr class="line purple">
-  				    <h3>Alive</h3>
-  				    <p>A pixel art adventure game where you'll be able to help human kind from its extinction. Incredible story featured with many puzzles and awesome scenarios.</p>
+              <hr class="line purple">
+              <h3>Alive</h3>
+              <p>A pixel art adventure game where you'll be able to help human kind from its extinction. Incredible story featured with many puzzles and awesome scenarios.</p>
             </a>
           </div>
-			    <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.8s">
-            <img src="img/hojetem.png" class="project-image">
-				    <hr  class="line blue">
-				    <h3>#hojetem</h3>
-				    <p>An awesome app created to help you finding the perfect party for you and your friends. Connect though your facebook account and enjoy its features!</p>
-			    </div>
-		    </div>
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.8s">
+            <a target="_blank" href="http://hojetem.party/">
+              <img src="img/hojetem.png" class="project-image">
+              <hr  class="line blue">
+              <h3>#hojetem</h3>
+              <p>An awesome app created to help you finding the perfect party for you and your friends. Connect though your facebook account and enjoy its features!</p>
+            </a>
+          </div>
+        </div>
         <div class="row">
           <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1.2s">
             <a target="_blank" href="http://mobileon.com.br/">
               <img src="img/mobileon.png" class="project-image">
-  				    <hr  class="line pink">
-  				    <h3>Mobileon</h3>
-  				    <p>A framework to create mobile versions of any existing site.</p>
+              <hr  class="line pink">
+              <h3>Mobileon</h3>
+              <p>A framework to create mobile versions of any existing site.</p>
             </a>
-			    </div>
+          </div>
           <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1.2s">
             <a target="_blank" href="/dad">
               <img src="img/dad.gif" class="project-image">
-  				    <hr  class="line yellow">
-  				    <h3>dad.js</h3>
-  				    <p>A simple and easy-to-use drag and drop jquery plugin for developers.</p>
+              <hr  class="line yellow">
+              <h3>dad.js</h3>
+              <p>A simple and easy-to-use drag and drop jquery plugin for developers.</p>
             </a>
-			    </div>
+          </div>
         </div>
-	    </div>
+      </div>
     </section>
 
 
