test project tree

--- a/public/lgml/index.html
+++ b/public/lgml/index.html
@@ -35,6 +35,7 @@
       loadSidebar: true,
       coverpage: true,
       autoHeader: true,
+      auto2top: true,
       subMaxLevel: 3
     }
   </script>
