--- a/public/dad/index.html
+++ b/public/dad/index.html
@@ -294,7 +294,7 @@
       </a>
     </footer>
     <script src="scripts/jquery.min.js"></script>
-    <script src="scripts/jquery.dad.js"></script>
+    <script src="scripts/jquery.dad.min.js"></script>
     <script>
       $(function () {
         $("#dad-logo").dad({
