--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,16 @@
   <meta property="og:site_name" content=" Konsole Studio">
   <meta property="og:description" content="Creative development studio">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-56185811-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-56185811-2');
+  </script>
+
   <!-- Styles -->
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/animate.css">
