--- a/public/index.html
+++ b/public/index.html
@@ -96,27 +96,43 @@
         </div>
         <div class="row">
           <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.4s">
-            <a target="_blank" href="/lgml">
-              <img src="img/lgml-banner.svg" class="project-image" />
-              <hr class="line green">
-              <h3>LGML</h3>
-              <p>An open source Game Framework made with Löve2d and lua</p>
-            </a>
-          </div>
-          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.6s">
             <a target="_blank" href="http://gamejolt.com/games/alive/10835">
               <img src="img/alive.gif" class="project-image" />
               <hr class="line purple">
               <h3>Alive</h3>
-              <p>A pixel art adventure game where you'll be able to help human kind from its extinction. Incredible story featured with many puzzles and awesome scenarios.</p>
+              <p>A pixel art adventure game where you'll be able to help human kind from its extinction.</p>
             </a>
           </div>
-          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1.8s">
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.6s">
+            <a target="_blank" href="https://gamejolt.com/games/ninja-block-z/10188">
+              <img src="img/ninja-blockz.gif" class="project-image" />
+              <hr  class="line darkPurple">
+              <h3>Ninja Block'z</h3>
+              <p>A mix of tetris and a platformer resulting an awesome and funny minigame.</p>
+            </a>
+          </div>
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.8s">
+            <a target="_blank" href="/files/Twinkle.rar">
+              <img src="img/twinkle.gif" class="project-image" />
+              <hr  class="line darkPurple">
+              <h3>Twinkle</h3>
+              <p>Infinite side scroller where you actions have effects.</p>
+            </a>
+          </div>
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1s">
             <a target="_blank" href="/dad">
               <img src="img/dad.gif" class="project-image" />
               <hr  class="line yellow">
               <h3>dad.js</h3>
               <p>A simple and easy-to-use drag and drop jquery plugin for developers.</p>
+            </a>
+          </div>
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1.2s">
+            <a target="_blank" href="/lgml">
+              <img src="img/lgml-banner.svg" class="project-image" />
+              <hr class="line green">
+              <h3>LGML</h3>
+              <p>An open source Game Framework made with Löve2d and lua.</p>
             </a>
           </div>
         </div>
