Add about section

--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#main-info" class="scroll">Projects</a></li>
+            <li><a href="#about" class="scroll">About</a></li>
             <li><a href="#newsletter" class="scroll">Newsletter</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
@@ -92,7 +93,7 @@
     <section id="main-info">
       <div class="container">
         <div class="row">
-          <h2 class='section-title'>Our projects</h2>
+          <h2 class='section-title'>Projects</h2>
         </div>
         <div class="row">
           <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="0.4s">
@@ -139,7 +140,31 @@
       </div>
     </section>
 
-
+    <section id="about" class="bg-gray pad-sm light-gray-bg">
+      <div class="container">
+        <div class="row text-center">
+          <h2 class='section-title densed'>About</h2>
+        </div>
+        <div class="row">
+          <p class="description">
+            Konsole studio is a development studio located in Porto Alegre, Brazil.<br />
+            It started as an independent game development studio with the game Alive and nowadays provides IT services in general.<br />
+            Founded and maintained by <u>William da Silva Lima</u> (williammustaffa), it is a one-man studio.
+          </p>
+          <div class="description-links">
+            <ul>
+              <li>
+                <a target="_blank" href="https://github.com/williammustaffa"><i class="fa fa-github"></i> Github</a>
+              </li>
+              <li>
+                <a target="_blank" href="https://www.linkedin.com/in/williamsilvalima/"><i class="fa fa-linkedin"></i> Linkedin</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+  
     <section id="newsletter" class="pad-lg light-gray-bg">
       <div class="container">
         <div class="row">
