--- a/public/index.html
+++ b/public/index.html
@@ -153,8 +153,7 @@
         <div class="row">
           <p class="description">
             Konsole studio is a development studio located in Porto Alegre, Brazil.<br />
-            It started as an independent game development studio with the game Alive and nowadays provides IT services in general.<br />
-            Founded and maintained by <u>William da Silva Lima</u> (williammustaffa), it is a one-man studio.
+            Maintained by <u>William da Silva Lima</u> (williammustaffa), it is a one-man studio.
           </p>
           <div class="description-links">
             <ul>
