--- a/public/k0N50L3/index.html
+++ b/public/k0N50L3/index.html
@@ -3,8 +3,8 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>KONSOLE STUDIO</title>
-    <link rel="stylesheet" href="fonts/stylesheet.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="k0N50L3/fonts/stylesheet.css">
+    <link rel="stylesheet" href="k0N50L3/css/style.css">
 </head>
 <body>
 <canvas id="screen"></canvas>
