--- a/public/jgame/index.html
+++ b/public/jgame/index.html
@@ -13,11 +13,11 @@
           background: #fff;
         }
       </style>
-      <link rel="icon" href="./favicon.ico" />
+      <link rel="icon" href="jgame/favicon.ico" />
   </head>
   <body>
     <!-- PRINCIPAL SCRIPT -->
     <div id="app"></div>
-    <script type="application/javascript" src="build/main.js"></script>
+    <script type="application/javascript" src="jgame/build/main.js"></script>
   </body>
 </html>
