--- a/public/k0N50L3/index.html
+++ b/public/k0N50L3/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <canvas id="screen"></canvas>
-<script src="js/canvas.js"></script>
+<script src="k0N50L3/js/canvas.js"></script>
 </body>
 </html>
