--- a/public/dad/index.html
+++ b/public/dad/index.html
@@ -32,9 +32,9 @@
 
       gtag('config', 'UA-56185811-2');
     </script>
-    <link rel="stylesheet" type="text/css" href="dad/styles/reset.css" />
-    <link rel="stylesheet" type="text/css" href="dad/styles/bootstrap.css" />
-    <link rel="stylesheet" type="text/css" href="dad/styles/demo.css" />
+    <link rel="stylesheet" type="text/css" href="/dad/styles/reset.css" />
+    <link rel="stylesheet" type="text/css" href="/dad/styles/bootstrap.css" />
+    <link rel="stylesheet" type="text/css" href="/dad/styles/demo.css" />
   </head>
   <body>
     <a
@@ -97,9 +97,9 @@
     </style>
     <div class="cover">
       <div id="dad-logo" class="clearfix">
-        <div><img src="dad/assets/piece1.png" /></div>
-        <div><img src="dad/assets/piece2.png" /></div>
-        <div><img src="dad/assets/piece1.png" /></div>
+        <div><img src="/dad/assets/piece1.png" /></div>
+        <div><img src="/dad/assets/piece2.png" /></div>
+        <div><img src="/dad/assets/piece1.png" /></div>
       </div>
       <h1 class="text-center cover-title">
         A simple and awesome jquery <strong>Drag And Drop</strong> plugin!
@@ -303,8 +303,8 @@
         Konsole Studio © 2020
       </a>
     </footer>
-    <script src="dad/scripts/jquery.min.js"></script>
-    <script src="dad/scripts/jquery.dad.js"></script>
+    <script src="/dad/scripts/jquery.min.js"></script>
+    <script src="/dad/scripts/jquery.dad.js"></script>
     <script>
       $(function () {
         $("#dad-logo").dad();
