--- a/public/index.html
+++ b/public/index.html
@@ -43,13 +43,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="scroll" href="#header"><img class="logo" height='40' src="img/logo_konsole.png" alt="Logo"></a>
+          <a class="scroll" href="#header"><img class="logo" height='100' src="img/LogoKonsoleMinimalistic.png" alt="Logo"></a>
         </div>
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li><a href="#main-info" class="scroll">Projects</a></li>
-            <li><a href="#about" class="scroll">About</a></li>
-            <li><a href="#newsletter" class="scroll">Newsletter</a></li>
           </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -59,13 +57,11 @@
       <div class="navbar-container navbar-inverse">
         <div class="row">
           <div class="col-xs-6">
-            <a class="scroll" href="#header"><img height='40' src="img/logo_konsole.png" alt="Logo"></a>
+            <a class="scroll" href="#header"><img height='100' src="img/LogoKonsoleMinimalistic.png" alt="Logo"></a>
           </div>
           <div class="col-xs-6 text-right">
             <ul class="nav navbar-nav navbar-right">
               <li><a href="#main-info" class="scroll">Projects</a></li>
-              <li><a href="#about" class="scroll">About</a></li>
-              <li><a href="#newsletter" class="scroll">Newsletter</a></li>
             </ul>
           </div>
         </div>
@@ -125,6 +121,14 @@
           </div>
         </div>
         <div class="row">
+          <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1s">
+            <a target="_blank" href="https://store.steampowered.com/app/2996680/Nethermage/">
+              <img src="img/nethermage.jpg" class="project-image" />
+              <hr  class="line red">
+              <h3>Nethermage</h3>
+              <p>A survivors-like, story rich roguelite in a post-apocaliptic universe</p>
+            </a>
+          </div>
           <div class="col-sm-4 wow fadeIn padding-bottom" data-wow-delay="1s">
             <a target="_blank" href="/dad">
               <img src="img/dad.gif" class="project-image" />
